# partial

./: Cargo.toml
examples/: demo.rs
partial-core/: Cargo.toml
partial-core/src/: lib.rs  marker.rs  partial.rs  patch.rs
partial-derive/: Cargo.toml
partial-derive/src/: expand.rs  lib.rs
src/: lib.rs
traversal-core/: Cargo.toml
traversal-derive/: Cargo.toml
