[package]
name = "partial"
version = "0.1.0"
edition = "2024"

[dependencies]
partial-derive = { workspace = true }
partial-core = { workspace = true }

[workspace]
members = ["partial-core", "partial-derive"]
resolver = "3"

[workspace.dependencies]
partial-core = { path = "partial-core" }
partial-derive = { path = "partial-derive" }

proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
serde = "1.0.219"
