[package]
name = "traversal"
version = "0.1.0"
edition = "2024"

[dependencies]
traversal-derive = { workspace = true }
traversal-core = { workspace = true }

[workspace]
members = ["traversal-core", "partial-derive"]
resolver = "3"

[workspace.dependencies]
traversal-core = { path = "traversal-core" }
traversal-derive = { path = "traversal-derive" }

proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
